# tekinbot-discord

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml  requirements-dev-minimal.txt  requirements-dev.txt  requirements-minimal.txt  requirements.txt
tekinbot/: neo_tekin.py
tekinbot/comms/: __init__.py
tekinbot/comms/manage/: theme.py
tekinbot/comms/message/: .define.py.swp  README.md  foaas.py  karma.py  poll.py  roll.py  simple_responses.py
tekinbot/comms/message/searching/: scryfall.py  wiki.py  youtube.py
tekinbot/comms/message/storytime/corpus/: 1. HOW THEY WENT TO THE MOUNTAINS TO EAT NUTS  2. HOW CHANTICLEER AND PARTLET WENT TO VISIT MR KORBES  3. HOW PARTLET DIED AND WAS BURIED, AND HOW CHANTICLEER DIED OF GRIEF  ASHPUTTEL  FAMILY FUED  ORPHEUSFTW YTP COLLAB 2  THE FESH PINCE  THE MISER IN THE BUSH  THE MOUSE, THE BIRD, AND THE SAUSAGE  THE PHANTOM BLADE  THE REVENGERS  THE TWELVE HUNTSMEN  THE VALIANT LITTLE TAILOR  THE WATER OF LIFE  THE WHITE SNAKE  THE WILLOW-WREN AND THE BEAR  THE WOLF AND THE SEVEN LITTLE KIDS  TOM THUMB
tekinbot/comms/message/what_say/: remember.py  what_say.py
tekinbot/db/models/: what_say.py
